<resources>
    <string name="app_name">MyBridge</string>
    <string name="hello_blank_fragment">Hello blank fragment !!!</string>
    <string name="press_again_to_close">Press back again to close the</string>
    <string name="get_started">Get Started</string>
    <string name="intro1">Your digital networking world is about to change for the better</string>
    <string name="intro2">Here, you are more than a profile and you are more than someone’s next lead.</string>
    <string name="intro3">Welcome! You are exactly who we wanted to see here.</string>
    <string name="title1">Title 1</string>
    <string name="title2">Title 2</string>
    <string name="title3">Title 3</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="unexpected_response"> Unexpected Server Response </string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="action_sign_up">SIGN UP</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="match_password">Passwrod &amp; Confirm Password must be same</string>
    <string name="login_failed">"Login failed"</string>
    <string name="signup_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="forgot_pass">FORGOT PASSWORD</string>
    <string name="setnew_pass">SET NEW PASSWORD</string>
    <string name="action_reset_pass">DONE</string>
    <string name="pass_instruction">Type your new password</string>
    <string name="login_with">Login with Gmail</string>
    <string name="account_dont">Don\'t have an account?</string>
    <string name="account_already">Already on myBridge? </string>
    <string name="sign_up"> Sign Up</string>
    <string name="sign_in"> Sign In</string>
    <string name="signup_info">Make the most of your professional life</string>
    <string name="serverNotRespond">Server not responding</string>
    <string name="e_mail">Email</string>
    <string name="password">Password</string>
    <string name="password_">Password*</string>
    <string name="Password_forgot">Forgot Password?</string>
    <string name="or">Or</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="remember_me">Remember Me</string>
    <string name="already_on_mybridge">Already on myBridge?</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_your_password_in_two_easy_steps">Reset your password in two easy steps.</string>
    <string name="email_or_phone">Email or phone</string>
    <string name="reset_password">Reset password</string>
    <string name="back">Back</string>
    <string name="set_new_password">Set new password</string>
    <string name="new_pass_info">Create a new password that is at least 8 characters long.</string>
    <string name="submit">Submit</string>
    <string name="verify_code_info">We sent a code to your\nemail</string>
    <string name="verification_code_info">Enter the 6-digit verification code send to </string>
    <string name="change">Change</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_code_hint">- - - - - - </string>
    <string name="verification_code_email_info">if you don’t see the email in your inbox. check your spam folder.</string>
    <string name="verification_code_sms_info">if you don’t see the otp in your SMS. Click on resend code.</string>
    <string name="new_to_mybridge">New to myBridge?</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="preview_signup_info">Sign up now to get your own personalized timeline!</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="signin_with_email">Sign in with email</string>
    <string name="preview_signin_info">Sign in now to get your own personalized timeline!</string>
    <string name="google_web_client_id">350980133077-gv0qmihbnurrh4uskfro6om40k7cuor9.apps.googleusercontent.com</string>
    <string name="please_enter_a_valid_e_mail">Please enter a valid e-mail</string>
    <string name="please_select_country">Please select country</string>
    <string name="please_select_city">Please select city</string>
    <string name="please_enter_postal_code">Please select postal code</string>
    <string name="valid_job_title">You need to provide a valid job title</string>
    <string name="valid_collage">You need to provide a valid collage name</string>
    <string name="valid_company">You need to provide a valid company</string>
    <string name="valid_dob">You need to select valid Date of birth</string>
    <string name="valid_end_year">You need to select valid End year</string>
    <string name="valid_start_year">You need to select valid Start year</string>
    <string name="please_enter_emp_type">Please select employement type</string>
    <string name="age_error">We love having ambitious people like you on myBridge, but you’re currently under our age limit period.</string>
    <string name="first_name_required">First Name is mandatory</string>
    <string name="last_name_required">Last Name is mandatory</string>
    <string name="email_address_required">Email address is mandatory</string>
    <string name="enter_verification_code">Please enter verification code</string>
    <string name="enter_valid_verification_code">Please enter valid verification code</string>
    <string name="invalid_email_address">Please enter a valid e-mail</string>
    <string name="password_required">Password is mandatory</string>
    <string name="invalid_password">That\'s not the right password.</string>
    <string name="user_not_found">User not found</string>
    <string name="resend_code">Resend code</string>
    <string name="mycalendar">myCalendar</string>
    <string name="myjobs">myJobs</string>
    <string name="mymeetings">myMeetings</string>
    <string name="mydisk">myDisk</string>
    <string name="postal_code">Postal Code</string>
    <string name="next">Next</string>
    <string name="onboarding_1">" First, let's find out where you live. This is\nthe first step in creating your profile\n(called myProfile)."</string>
    <string name="welcome_sola">Welcome, Sola!</string>
    <string name="welcome_">Welcome,</string>
    <string name="country_">Country *</string>
    <string name="country">Country</string>
    <string name="state_">State *</string>
    <string name="state">State</string>
    <string name="city_">City, State *</string>
    <string name="city">City</string>
    <string name="onboarding_2">Next, let\'s expand on your career details.</string>
    <string name="most_recent_job_title_">Most recent job title *</string>
    <string name="type__">Type.....</string>
    <string name="employment_type_">Employment type *</string>
    <string name="most_recent_company_">Most recent company *</string>
    <string name="company">Company</string>
    <string name="select_one">Select one</string>
    <string name="onboarding_2_info">Next, let\'s establish your background.</string>
    <string name="school_or_college_university_">School or College/University *</string>
    <string name="school_or_college_university">School or College/University</string>
    <string name="start_year_">Start year *</string>
    <string name="end_year_or_expected_">End year(or expected) *</string>
    <string name="i_m_not_a_student">I’m not a student</string>
    <string name="i_m_student">I’m a student</string>
    <string name="onboarding_3_info">Ok, now let\'s put a face to that name!\nAdd a photo to myProfile</string>
    <string name="skip">Skip</string>
    <string name="set_profile_picture">Set Profile Picture</string>
    <string name="onboarding_4_info">Next question: Are you wanting to elevate your career?</string>
    <string name="career_1">Yes, I\'m looking for a career change.</string>
    <string name="career_2">No, but I could be tempted.</string>
    <string name="career_3">No, I\'m all set.</string>
    <string name="finish">Finish</string>
    <string name="onboarding_6_info">Connect with people you know by extending a virtual handshake. Follow those you want to get to know better.</string>
    <string name="onboarding_6_detail">We recommend following at least 5 people to help you begin to network.</string>
    <string name="search_hint">Search for someone specific to connect with…</string>
    <string name="search_location">Search Location</string>
    <string name="search_collage">Search Collage</string>
    <string name="search_company">Search Company</string>
    <string name="done">Done</string>
    <string name="city_state_or_region_within_this_area">City, State or Region within this area</string>
    <string name="month_">Month*</string>
    <string name="day_">Day*</string>
    <string name="year_">Year*</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="i_m_over_13">I’m over 13</string>
    <string name="api_error">Something went wrong!</string>
    <string name="dob_error">We love having ambitious people like you on myBridge, but you’re currently under our age limit period.</string>
    <string name="err_select_image">Select Image</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="following">Following</string>
    <string name="handshake">Handshake</string>
    <string name="confirm_your_email">Confirm your email</string>
    <string name="type_in_the_code_we_sent_to_">Type in the code we sent to </string>
    <string name="edit_email">Edit Email</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_team">Team</string>
    <string name="bottom_calendar">Calendar</string>
    <string name="bottom_disc">Disc</string>
    <string name="bottom_menu">Menu</string>
    <string name="not_interested_in_this_post">Not interested in this Post</string>
    <string name="block_and_report_post">Block and Report Post</string>
    <string name="handshake_request">Handshake Request</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="tag_people">Tag people</string>
    <string name="feeling_activity">Feeling/activity</string>
    <string name="gif">GIF</string>
    <string name="camera">Camera</string>
    <string name="everyone">Everyone</string>
    <string name="my_circle">My Circle</string>
    <string name="my_circle_followers"><![CDATA[My Circle & Followers]]></string>
    <string name="untag_yourself">Untag yourself</string>
    <string name="block_report_title">Block And Report</string>
    <string name="please_select_a_problem">Please select a problem</string>
    <string name="block_report_subtitle">If someone is in immediate danger, get help before reporting to myBridge. Don\'t wait.</string>
    <string name="pretending_to_be_someone">Pretending to be someone</string>
    <string name="fake_Account">Fake account</string>
    <string name="fake_name">Fake name</string>
    <string name="posting_inappropriate_things">Posting inappropriate things</string>
    <string name="harassment_or_bullying">Harassment or bullying</string>
    <string name="i_want_to_help">I want to help</string>
    <string name="cancel">Cancel</string>
    <string name="report">Report</string>
    <string name="repost">Repost</string>
    <string name="quote_post">Quote Post</string>
    <string name="copy_link">Copy Link</string>
    <string name="whoreply">Who can reply?</string>
    <string name="chose_title">Choose who can reply to this post</string>
</resources>