<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/bottom_home" />

    <item
        android:id="@+id/teamFragment"
        android:icon="@drawable/ic_team"
        android:title="@string/bottom_team" />

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/bottom_calendar" />

    <item
        android:id="@+id/discFragment"
        android:icon="@drawable/ic_disc"
        android:title="@string/bottom_disc" />

    <item
        android:id="@+id/menuFragment"
        android:icon="@drawable/ic_menu"
        android:title="@string/bottom_menu" />

</menu>
