<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="0dp"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/_15sdp"
        style="@style/Text_grey_16_Inter_Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:text="@string/email" />

<!--    android:afterTextChanged="@{(editable)->viewClickHandler.afterEmailTextChanged(editable)}"-->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/ecEmail"
        style="@style/edt_text_black_12_Inter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/squere_edittext"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/_3sdp"
        style="@style/signin_error_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:gravity="center"
        android:text="@string/please_enter_a_valid_e_mail" />

</LinearLayout>

