<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/tvNotInterested"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/not_interested_in_this_post"
        android:textColor="@color/text_grey"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_post_interest"
        app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFollow"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/follow"
        android:textColor="@color/text_grey"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_user_follow"
        app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
        app:layout_constraintTop_toBottomOf="@id/tvNotInterested" />

    <TextView
        android:id="@+id/tvHandShakeRequest"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/handshake_request"
        android:textColor="@color/text_grey"
        android:textSize="16sp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_agree_select"
        app:drawableTint="@color/text_grey"
        app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
        app:layout_constraintTop_toBottomOf="@id/tvFollow" />

    <TextView
        android:id="@+id/tvBlockReport"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/block_and_report_post"
        android:textColor="@color/text_grey"
        android:textSize="16sp"
        app:drawableStartCompat="@drawable/ic_block"
        app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
        app:layout_constraintTop_toBottomOf="@id/tvHandShakeRequest" />

    <TextView
        android:id="@+id/tvUntag"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawablePadding="@dimen/_8sdp"
        android:text="@string/untag_yourself"
        android:textColor="@color/text_grey"
        android:textSize="16sp"
        android:visibility="gone"
        app:drawableStartCompat="@drawable/ic_tag"
        app:layout_constraintStart_toStartOf="@id/guideVerticalLeft"
        app:layout_constraintTop_toBottomOf="@id/tvBlockReport" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideVerticalLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
